--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,8 @@
   background-color: rgba(58, 58, 58, 0.411);
   color: rgb(224, 224, 224);
   font-weight: bold;
-  font-size: 40px;
+  font-size: 80px;
+  height: 100px;
   width: 310px;
   border-style: none;
   border-radius: 10px;
