--- a/src/index.css
+++ b/src/index.css
@@ -72,13 +72,12 @@
   cursor: text;
 }
 
-.mainTaskInput {
+#mainTaskInput {
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgba(58, 58, 58, 0.411);
   color: rgb(224, 224, 224);
   font-weight: bold;
   font-size: 80px;
-  height: 100px;
   width: 60vw;
   min-width: 300px;
   border-style: none;
